Better handle non-image uploads by adding a link to the original attachment (fixes #6)

--- a/field_config.json
+++ b/field_config.json
@@ -48,9 +48,9 @@
     "required": true,
     "pattern": ".+"
   },
-  "screenshot": {
+  "attachment": {
     "id": 900,
-    "image": true,
-    "content": "## Screenshot"
+    "attachment": true,
+    "content": "## Attachment"
   }
 }
