Adjust for Firefox for iOS campaign

--- a/field_config.json
+++ b/field_config.json
@@ -20,7 +20,7 @@
   },
   "phone": {
     "id": 400,
-    "content": "**Phone:** ",
+    "content": "**Phone/Tablet:** ",
     "pattern": ".+"
   },
   "github": {
